# CritiqueBot

./: README.md  main.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
backend/: main.py  pyproject.toml  requirements.txt
components/Feedback/: Feedback.tsx
components/ui/: Galaxy.tsx
